--- a/drivers/input/misc/Makefile
+++ b/drivers/input/misc/Makefile
@@ -69,5 +69,7 @@ obj-$(CONFIG_SENSORS_PANASONIC_GYRO)	+= ewtzmu2.o
 obj-$(CONFIG_SENSORS_BMA250)		+= bma250.o
 obj-$(CONFIG_SENSORS_BMA250_BOSCH)	+= bma250_bosch.o
 obj-$(CONFIG_INPUT_CAPELLA_CM3629)	+= cm3629.o
+obj-$(CONFIG_INPUT_ISL29028)		+= isl29028.o
+obj-$(CONFIG_INPUT_ISL29029)		+= isl29029.o
 obj-$(CONFIG_SENSORS_R3GD20)		+= r3gd20.o
 obj-y 					+= mpu3050/
