leds: flash: add 'united' drivers for aat1271 and aat 1277 under FLASHLIGHT_AAT

--- a/drivers/leds/Kconfig
+++ b/drivers/leds/Kconfig
@@ -601,4 +601,9 @@ config FLASHLIGHT_TPS61310
 	help
 	  Say Y here to enable the TI TPS61310 flashlight.
 
+config FLASHLIGHT_AAT
+	tristate "flashlight AAT1271/7"
+	help
+	  Say Y here to enable the AAT flashlight
+
 endif # NEW_LEDS
