tenderloin: regenerate defconfig

--- a/arch/arm/configs/cyanogenmod_tenderloin_defconfig
+++ b/arch/arm/configs/cyanogenmod_tenderloin_defconfig
@@ -1666,6 +1666,7 @@ CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_PM8XXX_VIBRATOR is not set
 CONFIG_INPUT_PMIC8XXX_PWRKEY=y
 # CONFIG_INPUT_MMA8450 is not set
+# CONFIG_INPUT_MPU3050 is not set
 # CONFIG_INPUT_GP2A is not set
 # CONFIG_INPUT_GPIO_TILT_POLLED is not set
 # CONFIG_INPUT_ATI_REMOTE2 is not set
@@ -2288,6 +2289,9 @@ CONFIG_VIDEO_IR_I2C=y
 # CONFIG_V4L_USB_DRIVERS is not set
 CONFIG_V4L_PLATFORM_DRIVERS=y
 # CONFIG_SOC_CAMERA is not set
+# CONFIG_VIDEO_NMI is not set
+CONFIG_ISDBT_NMI=y
+# CONFIG_ISDBT_NMI_DEBUG is not set
 
 #
 # Qualcomm MSM Camera And Video
@@ -2299,62 +2303,16 @@ CONFIG_MSM_CAMERA=y
 #
 # Camera Sensor Selection
 #
-# CONFIG_MT9D113 is not set
 # CONFIG_IMX074 is not set
-# CONFIG_S5K3H2YX is not set
-# CONFIG_S5K6A1GX is not set
-# CONFIG_S5K4E5YX is not set
-# CONFIG_AR0260 is not set
-# CONFIG_OV2722 is not set
-# CONFIG_OV5640 is not set
-# CONFIG_OV5647 is not set
+# CONFIG_WEBCAM_OV7692 is not set
 CONFIG_WEBCAM_MT9M113=y
 # CONFIG_WEBCAM_MT9M114 is not set
-# CONFIG_WEBCAM_OV7692 is not set
-# CONFIG_WEBCAM_OV9726 is not set
 # CONFIG_VX6953 is not set
-# CONFIG_MT9E013 is not set
-# CONFIG_IMX074_ACT is not set
-# CONFIG_S5K3H2YX_ACT is not set
-# CONFIG_QS_S5K4E1 is not set
-# CONFIG_S5K4E1 is not set
-# CONFIG_MSM_CAMERA_FLASH_SC628A is not set
-# CONFIG_IMX072 is not set
-# CONFIG_OV2720 is not set
 # CONFIG_MSM_CAMERA_FLASH is not set
 # CONFIG_VIDEO_MSM is not set
-# CONFIG_MSM_CAMERA_SENSOR is not set
-# CONFIG_MSM_ACTUATOR is not set
 CONFIG_MSM_GEMINI=y
 CONFIG_MSM_VPE=y
-# CONFIG_RAWCHIP is not set
-# CONFIG_RAWCHIPII is not set
-# CONFIG_CAMERA_IMAGE_NONE_BOARD is not set
 CONFIG_QUP_EXCLUSIVE_TO_CAMERA=y
-# CONFIG_S5K3L1YX is not set
-# CONFIG_IMX091 is not set
-# CONFIG_IMX105 is not set
-# CONFIG_IMX175 is not set
-# CONFIG_IMX135 is not set
-# CONFIG_OV8838 is not set
-# CONFIG_IMX175_ACT is not set
-# CONFIG_RUMBAS_ACT is not set
-# CONFIG_AD5823_ACT is not set
-# CONFIG_AD5816_ACT is not set
-# CONFIG_TI201_ACT is not set
-# CONFIG_ACT_OIS_BINDER is not set
-# CONFIG_LC898212_ACT is not set
-# CONFIG_MT9V113 is not set
-# CONFIG_IMX175_2LANE is not set
-# CONFIG_S5K4E5YX_ACT is not set
-# CONFIG_OV5693_ACT is not set
-# CONFIG_OV5693 is not set
-# CONFIG_RAWCHIP_MCLK is not set
-# CONFIG_DISABLE_MCLK_RAWCHIP_TO_MAINCAM is not set
-# CONFIG_S5K6A2YA is not set
-# CONFIG_S5K6AAFX is not set
-# CONFIG_VD6869 is not set
-# CONFIG_OV4688 is not set
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
 CONFIG_MSM_VIDC=y
 # CONFIG_RADIO_ADAPTERS is not set
@@ -2681,6 +2639,7 @@ CONFIG_USB_SUPPORT=y
 CONFIG_USB_COMMON=y
 CONFIG_USB_ARCH_HAS_HCD=y
 CONFIG_USB=y
+# CONFIG_USB_OTG_HOST is not set
 # CONFIG_USB_DEBUG is not set
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 
