--- a/drivers/input/misc/Makefile
+++ b/drivers/input/misc/Makefile
@@ -72,6 +72,10 @@ obj-$(CONFIG_INPUT_CAPELLA_CM3629)	+= cm3629.o
 obj-$(CONFIG_INPUT_ISL29028)		+= isl29028.o
 obj-$(CONFIG_INPUT_ISL29029)		+= isl29029.o
 obj-$(CONFIG_SENSORS_R3GD20)		+= r3gd20.o
+ifeq ($(CONFIG_MACH_HTC),y)
+obj-y 					+= mpu3050_htc/
+else
 obj-y 					+= mpu3050/
+endif
 obj-$(CONFIG_INPUT_LSM303DLH)		+= lsm303dlh_mag_sysfs.o lsm303dlh_acc_sysfs.o
 obj-$(CONFIG_INPUT_ISL29023)		+= isl29023.o
