--- a/arch/arm/configs/pyramid_defconfig
+++ b/arch/arm/configs/pyramid_defconfig
@@ -562,6 +562,7 @@ CONFIG_HAVE_ARCH_HAS_CURRENT_TIMER=y
 # CONFIG_MSM_CPU_PWRCTL is not set
 # CONFIG_MSM_UARTDM is not set
 CONFIG_REMOVE_SMI_2X_CLK=y
+CONFIG_L2_FREQ_FIXUP=y
 
 #
 # System MMU
@@ -2907,6 +2908,7 @@ CONFIG_MMC_UNSAFE_RESUME=y
 CONFIG_MMC_CLKGATE=y
 CONFIG_MMC_EMBEDDED_SDIO=y
 # CONFIG_MMC_PARANOID_SD_INIT is not set
+CONFIG_MMC_NO_BKOPS=y
 
 #
 # MMC/SD/SDIO Card Drivers
