--- a/arch/arm/configs/pyramid_defconfig
+++ b/arch/arm/configs/pyramid_defconfig
@@ -159,6 +159,7 @@ CONFIG_HAVE_KRETPROBES=y
 CONFIG_HAVE_DMA_ATTRS=y
 CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_USE_GENERIC_SMP_HELPERS=y
+CONFIG_GENERIC_SMP_IDLE_THREAD=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
@@ -476,6 +477,8 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 # CONFIG_MSM_RMT_STORAGE_CLIENT_STATS is not set
 CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
+CONFIG_MSM_MPDEC=y
+# CONFIG_MSM_MPDEC_INPUTBOOST_CPUMIN is not set
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
@@ -1670,6 +1673,7 @@ CONFIG_PMIC8058_OTHC=y
 # CONFIG_STM_LIS3DH is not set
 # CONFIG_BMP18X is not set
 # CONFIG_SENSORS_AKM8963_NST is not set
+# CONFIG_SENSORS_AKM8963 is not set
 # CONFIG_SENSORS_AKM8975 is not set
 # CONFIG_SENSORS_PANASONIC_GYRO is not set
 # CONFIG_SENSORS_BMA250 is not set
@@ -2043,10 +2047,11 @@ CONFIG_SENSORS_MSM_ADC=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_HWMON=y
 # CONFIG_THERMAL_MSM_POPMEM is not set
-CONFIG_THERMAL_TSENS=y
-# CONFIG_THERMAL_TSENS8960 is not set
+# CONFIG_THERMAL_TSENS is not set
+CONFIG_THERMAL_TSENS8960=y
 # CONFIG_THERMAL_TSENS8974 is not set
 # CONFIG_THERMAL_PM8XXX is not set
+CONFIG_THERMAL_MONITOR=y
 # CONFIG_WATCHDOG is not set
 CONFIG_SSB_POSSIBLE=y
 
@@ -2961,6 +2966,7 @@ CONFIG_LEDS_GPIO_PLATFORM=y
 # CONFIG_LEDS_LP5523 is not set
 # CONFIG_LEDS_PCA955X is not set
 # CONFIG_LEDS_PM8XXX is not set
+# CONFIG_LEDS_PM8038 is not set
 # CONFIG_LEDS_PCA9633 is not set
 # CONFIG_LEDS_DAC124S085 is not set
 # CONFIG_LEDS_REGULATOR is not set
