--- a/arch/arm/configs/pyramid_defconfig
+++ b/arch/arm/configs/pyramid_defconfig
@@ -409,6 +409,7 @@ CONFIG_HTC_HEADSET_PMIC=y
 CONFIG_HTC_HEADSET_GPIO=y
 CONFIG_HTC_HEADSET_8X60=y
 CONFIG_HTC_WAKE_ON_VOL=y
+CONFIG_FORCE_FAST_CHARGE=y
 
 #
 # HP Board Selection
