--- a/arch/arm/mach-msm/htc/Kconfig
+++ b/arch/arm/mach-msm/htc/Kconfig
@@ -76,4 +76,12 @@ config HTC_HEADSET_GPIO
 	help
 	  Provides support for HTC GPIO headset detection.
 
+config FORCE_FAST_CHARGE
+	bool "Force AC charge mode at will"
+	depends on ARCH_MSM8X60
+	default n
+	help
+	  A simple sysfs interface to force adapters that
+	  are detected as USB to charge as AC.
+
 endmenu
