pyramid: use good ol' tsens

--- a/arch/arm/configs/pyramid_defconfig
+++ b/arch/arm/configs/pyramid_defconfig
@@ -2048,11 +2048,10 @@ CONFIG_SENSORS_MSM_ADC=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_HWMON=y
 # CONFIG_THERMAL_MSM_POPMEM is not set
-# CONFIG_THERMAL_TSENS is not set
-CONFIG_THERMAL_TSENS8960=y
+CONFIG_THERMAL_TSENS=y
+# CONFIG_THERMAL_TSENS8960 is not set
 # CONFIG_THERMAL_TSENS8974 is not set
 # CONFIG_THERMAL_PM8XXX is not set
-CONFIG_THERMAL_MONITOR=y
 # CONFIG_WATCHDOG is not set
 CONFIG_SSB_POSSIBLE=y
 
