--- a/drivers/media/video/msm/Makefile
+++ b/drivers/media/video/msm/Makefile
@@ -11,9 +11,13 @@ ifeq ($(CONFIG_MSM_CAMERA_V4L2),y)
   obj-$(CONFIG_MSM_CAMERA) += rawchip/ yushanII/ io/ sensors/ actuators/ csi/
   obj-$(CONFIG_MSM_CAMERA) += msm_gesture.o
 else
-  obj-$(CONFIG_MSM_CAMERA) += msm_camera.o
+  obj-$(CONFIG_MSM_CAMERA) += msm_camera.o msm_v4l2.o
 endif
+ifdef CONFIG_MACH_TENDERLOIN
+obj-$(CONFIG_MSM_CAMERA) += msm_axi_qos.o
+else
 obj-$(CONFIG_MSM_CAMERA) += msm_axi_qos.o gemini/ swfv/
+endif
 obj-$(CONFIG_MSM_CAMERA_FLASH) += flash.o
 obj-$(CONFIG_ARCH_MSM_ARM11) += msm_vfe7x.o msm_io7x.o
 ifeq ($(CONFIG_MSM_CAMERA_V4L2),y)
@@ -49,10 +53,12 @@ else
   obj-$(CONFIG_WEBCAM_OV7692) += ov7692.o
   obj-$(CONFIG_WEBCAM_OV7692_QRD) += ov7692_qrd.o
 endif
-obj-$(CONFIG_QS_S5K4E1) += qs_s5k4e1.o qs_s5k4e1_reg.o
 obj-$(CONFIG_VB6801) += vb6801.o
 obj-$(CONFIG_IMX072) += imx072.o imx072_reg.o
 obj-$(CONFIG_OV5640) += ov5640.o
 obj-$(CONFIG_MT9D112) += mt9d112.o mt9d112_reg.o
 
-obj-$(CONFIG_MT9D113) += mt9d113.o mt9d113_reg.o
+ifdef CONFIG_MACH_TENDERLOIN
+obj-$(CONFIG_WEBCAM_MT9M113) += mt9m113.o mt9m113_reg.o
+obj-$(CONFIG_VIDEO_MSM) += msm_v4l2_video.o
+endif
