--- a/arch/arm/configs/tenderloin4g_android_defconfig
+++ b/arch/arm/configs/tenderloin4g_android_defconfig
@@ -424,12 +424,12 @@ CONFIG_MSM_AMSS_VERSION=6225
 CONFIG_MSM_AMSS_VERSION_6225=y
 CONFIG_MSM7X00A_USE_GP_TIMER=y
 # CONFIG_MSM7X00A_USE_DG_TIMER is not set
-# CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE_SUSPEND is not set
-CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE=y
+CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE_SUSPEND=y
+# CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE is not set
 # CONFIG_MSM7X00A_SLEEP_MODE_APPS_SLEEP is not set
 # CONFIG_MSM7X00A_SLEEP_MODE_RAMP_DOWN_AND_WAIT_FOR_INTERRUPT is not set
 # CONFIG_MSM7X00A_SLEEP_WAIT_FOR_INTERRUPT is not set
-CONFIG_MSM7X00A_SLEEP_MODE=1
+CONFIG_MSM7X00A_SLEEP_MODE=0
 # CONFIG_MSM7X00A_IDLE_SLEEP_MODE_POWER_COLLAPSE_SUSPEND is not set
 # CONFIG_MSM7X00A_IDLE_SLEEP_MODE_POWER_COLLAPSE is not set
 # CONFIG_MSM7X00A_IDLE_SLEEP_MODE_APPS_SLEEP is not set
@@ -564,7 +564,8 @@ CONFIG_HAVE_ARCH_HAS_CURRENT_TIMER=y
 # CONFIG_MSM_CPU_PWRCTL is not set
 CONFIG_MSM_UARTDM=y
 CONFIG_REMOVE_SMI_2X_CLK=y
-
+CONFIG_MSM_MPDEC=y
+CONFIG_L2_FREQ_FIXUP=y
 #
 # System MMU
 #
@@ -719,12 +720,12 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -799,31 +800,31 @@ CONFIG_PACKET=y
 CONFIG_UNIX=y
 # CONFIG_UNIX_DIAG is not set
 CONFIG_XFRM=y
-# CONFIG_XFRM_USER is not set
+CONFIG_XFRM_USER=y
 # CONFIG_XFRM_SUB_POLICY is not set
-# CONFIG_XFRM_MIGRATE is not set
+CONFIG_XFRM_MIGRATE=y
 # CONFIG_XFRM_STATISTICS is not set
 CONFIG_XFRM_IPCOMP=y
 CONFIG_NET_KEY=y
-# CONFIG_NET_KEY_MIGRATE is not set
+CONFIG_NET_KEY_MIGRATE=y
 CONFIG_INET=y
-# CONFIG_IP_MULTICAST is not set
+CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
 # CONFIG_IP_FIB_TRIE_STATS is not set
 CONFIG_IP_MULTIPLE_TABLES=y
-# CONFIG_IP_ROUTE_MULTIPATH is not set
+CONFIG_IP_ROUTE_MULTIPATH=y
 # CONFIG_IP_ROUTE_VERBOSE is not set
 CONFIG_IP_ROUTE_CLASSID=y
 CONFIG_IP_PNP=y
 CONFIG_IP_PNP_DHCP=y
 CONFIG_IP_PNP_BOOTP=y
 CONFIG_IP_PNP_RARP=y
-# CONFIG_NET_IPIP is not set
+CONFIG_NET_IPIP=y
 # CONFIG_NET_IPGRE_DEMUX is not set
 # CONFIG_ARPD is not set
 # CONFIG_SYN_COOKIES is not set
 # CONFIG_INET_AH is not set
-# CONFIG_INET_ESP is not set
+CONFIG_INET_ESP=y
 CONFIG_INET_IPCOMP=y
 CONFIG_INET_XFRM_TUNNEL=y
 CONFIG_INET_TUNNEL=y
@@ -835,7 +836,7 @@ CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 # CONFIG_INET_UDP_DIAG is not set
 CONFIG_TCP_CONG_ADVANCED=y
-# CONFIG_TCP_CONG_BIC is not set
+CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
 # CONFIG_TCP_CONG_WESTWOOD is not set
 # CONFIG_TCP_CONG_HTCP is not set
@@ -941,13 +942,13 @@ CONFIG_NETFILTER_XT_TARGET_MARK=y
 CONFIG_NETFILTER_XT_TARGET_NFLOG=y
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
 # CONFIG_NETFILTER_XT_TARGET_NOTRACK is not set
-# CONFIG_NETFILTER_XT_TARGET_RATEEST is not set
-# CONFIG_NETFILTER_XT_TARGET_TEE is not set
-# CONFIG_NETFILTER_XT_TARGET_TPROXY is not set
-# CONFIG_NETFILTER_XT_TARGET_TRACE is not set
+CONFIG_NETFILTER_XT_TARGET_RATEEST=y
+CONFIG_NETFILTER_XT_TARGET_TEE=y
+CONFIG_NETFILTER_XT_TARGET_TPROXY=y
+CONFIG_NETFILTER_XT_TARGET_TRACE=y
 # CONFIG_NETFILTER_XT_TARGET_SECMARK is not set
 CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
-# CONFIG_NETFILTER_XT_TARGET_TCPOPTSTRIP is not set
+CONFIG_NETFILTER_XT_TARGET_TCPOPTSTRIP=y
 
 #
 # Xtables matches
@@ -1058,7 +1059,7 @@ CONFIG_IP6_NF_MATCH_RT=y
 CONFIG_IP6_NF_TARGET_HL=y
 CONFIG_IP6_NF_FILTER=y
 CONFIG_IP6_NF_TARGET_REJECT=y
-# CONFIG_IP6_NF_TARGET_REJECT_SKERR is not set
+CONFIG_IP6_NF_TARGET_REJECT_SKERR=y
 CONFIG_IP6_NF_MANGLE=y
 CONFIG_IP6_NF_RAW=y
 # CONFIG_IP6_NF_SECURITY is not set
@@ -1067,8 +1068,14 @@ CONFIG_IP6_NF_RAW=y
 # CONFIG_RDS is not set
 # CONFIG_TIPC is not set
 # CONFIG_ATM is not set
-# CONFIG_L2TP is not set
-# CONFIG_BRIDGE is not set
+CONFIG_L2TP=y
+# CONFIG_L2TP_DEBUGFS is not set
+CONFIG_L2TP_V3=y
+CONFIG_L2TP_IP=y
+CONFIG_L2TP_ETH=y
+CONFIG_STP=y
+CONFIG_BRIDGE=y
+# CONFIG_BRIDGE_IGMP_SNOOPING is not set
 # CONFIG_NET_DSA is not set
 # CONFIG_VLAN_8021Q is not set
 # CONFIG_DECNET is not set
@@ -1172,12 +1179,7 @@ CONFIG_BT_HIDP=y
 # CONFIG_BT_HCISMD is not set
 # CONFIG_BT_HCIBTUSB is not set
 # CONFIG_BT_HCIBTSDIO is not set
-CONFIG_BT_HCIUART=y
-# CONFIG_BT_HCIUART_H4 is not set
-CONFIG_BT_HCIUART_BCSP=y
-# CONFIG_BT_HCIUART_ATH3K is not set
-# CONFIG_BT_HCIUART_LL is not set
-# CONFIG_BT_HCIUART_IBS is not set
+# CONFIG_BT_HCIUART is not set
 # CONFIG_BT_HCIBCM203X is not set
 # CONFIG_BT_HCIBPA10X is not set
 # CONFIG_BT_MSM_SLEEP is not set
@@ -1293,7 +1295,7 @@ CONFIG_ANDROID_PMEM=y
 # CONFIG_TSPP is not set
 # CONFIG_HAPTIC_ISA1200 is not set
 CONFIG_PMIC8058_PWM=y
-CONFIG_PMIC8XXX_VIBRATOR=y
+# CONFIG_PMIC8XXX_VIBRATOR is not set
 # CONFIG_PMIC8XXX_VIBRATOR_PWM is not set
 # CONFIG_ANDROID_VIBRATOR is not set
 # CONFIG_TOUCHSENSE_VIBRATOR is not set
@@ -1444,7 +1446,7 @@ CONFIG_NET_VENDOR_I825XX=y
 CONFIG_NET_VENDOR_MARVELL=y
 CONFIG_NET_VENDOR_MICREL=y
 # CONFIG_KS8851_MLL is not set
-CONFIG_MSM_RMNET=y
+# CONFIG_MSM_RMNET is not set
 # CONFIG_MSM_RMNET_DEBUG is not set
 # CONFIG_QFEC is not set
 CONFIG_NET_VENDOR_NATSEMI=y
@@ -1488,7 +1490,8 @@ CONFIG_PPP_DEFLATE=y
 CONFIG_PPP_FILTER=y
 CONFIG_PPP_MPPE=y
 # CONFIG_PPP_MULTILINK is not set
-# CONFIG_PPPOE is not set
+CONFIG_PPPOE=y
+CONFIG_PPPOL2TP=y
 CONFIG_PPPOLAC=y
 CONFIG_PPPOPNS=y
 CONFIG_PPP_ASYNC=y
@@ -1519,7 +1522,7 @@ CONFIG_USB_NET_CDC_NCM=y
 # CONFIG_USB_NET_PLUSB is not set
 # CONFIG_USB_NET_MCS7830 is not set
 # CONFIG_USB_NET_RNDIS_HOST is not set
-# CONFIG_USB_NET_CDC_SUBSET is not set
+CONFIG_USB_NET_CDC_SUBSET=y
 # CONFIG_USB_NET_ZAURUS is not set
 # CONFIG_USB_NET_CX82310_ETH is not set
 # CONFIG_USB_NET_KALMIA is not set
@@ -1551,6 +1554,8 @@ CONFIG_ATH6KL_DEBUG=y
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
 #
+CONFIG_USB_SIERRA_NET_SWI=y
+CONFIG_USB_NET_HW_CDC=y
 # CONFIG_WAN is not set
 # CONFIG_ISDN is not set
 
@@ -1598,6 +1603,7 @@ CONFIG_INPUT_KEYBOARD=y
 # CONFIG_KEYBOARD_OMAP4 is not set
 # CONFIG_KEYBOARD_XTKBD is not set
 # CONFIG_KEYBOARD_QCIKBD is not set
+CONFIG_KEYBOARD_GPIO_PE=y
 # CONFIG_INPUT_MOUSE is not set
 # CONFIG_INPUT_JOYSTICK is not set
 # CONFIG_INPUT_TABLET is not set
@@ -1747,7 +1753,7 @@ CONFIG_SERIAL_CORE=y
 CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_SERIAL_MSM is not set
 CONFIG_SERIAL_MSM_HS=y
-# CONFIG_SERIAL_MSM_HS_BRCM is not set
+CONFIG_SERIAL_MSM_HS_BRCM=y
 CONFIG_SERIAL_MSM_HSL=y
 # CONFIG_SERIAL_CIR is not set
 CONFIG_SERIAL_MSM_HSL_CONSOLE=y
@@ -2018,6 +2024,7 @@ CONFIG_THERMAL_HWMON=y
 # CONFIG_THERMAL_MSM_POPMEM is not set
 # CONFIG_THERMAL_TSENS is not set
 # CONFIG_THERMAL_TSENS8960 is not set
+CONFIG_THERMAL_TSENS8x60=y
 # CONFIG_THERMAL_TSENS8974 is not set
 # CONFIG_THERMAL_PM8XXX is not set
 # CONFIG_WATCHDOG is not set
@@ -2264,8 +2271,34 @@ CONFIG_VIDEO_IR_I2C=y
 # CONFIG_VIDEO_M52790 is not set
 # CONFIG_MSM_VCAP is not set
 # CONFIG_V4L_USB_DRIVERS is not set
-# CONFIG_V4L_PLATFORM_DRIVERS is not set
+CONFIG_V4L_PLATFORM_DRIVERS=y
+# CONFIG_SOC_CAMERA is not set
+# CONFIG_VIDEO_NMI is not set
+CONFIG_ISDBT_NMI=y
+# CONFIG_ISDBT_NMI_DEBUG is not set
+
+#
+# Qualcomm MSM Camera And Video
+#
+CONFIG_MSM_CAMERA=y
+# CONFIG_MSM_CAMERA_DEBUG is not set
+# CONFIG_MSM_CAMERA_V4L2 is not set
+
+#
+# Camera Sensor Selection
+#
+# CONFIG_IMX074 is not set
+# CONFIG_WEBCAM_OV7692 is not set
+CONFIG_WEBCAM_MT9M113=y
+# CONFIG_WEBCAM_MT9M114 is not set
+# CONFIG_VX6953 is not set
+# CONFIG_MSM_CAMERA_FLASH is not set
+# CONFIG_VIDEO_MSM is not set
+CONFIG_MSM_GEMINI=y
+CONFIG_MSM_VPE=y
+CONFIG_QUP_EXCLUSIVE_TO_CAMERA=y
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
+CONFIG_MSM_VIDC=y
 # CONFIG_MSM_WFD is not set
 # CONFIG_RADIO_ADAPTERS is not set
 
@@ -2527,7 +2560,7 @@ CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
 # CONFIG_HID_BATTERY_STRENGTH is not set
 # CONFIG_HIDRAW is not set
-# CONFIG_UHID is not set
+CONFIG_UHID=y
 
 #
 # USB Input Devices
@@ -2539,7 +2572,8 @@ CONFIG_USB_HID=y
 #
 # Special HID drivers
 #
-# CONFIG_HID_A4TECH is not set
+CONFIG_HID_GENERIC=y
+CONFIG_HID_A4TECH=y
 # CONFIG_HID_ACRUX is not set
 # CONFIG_HID_APPLE is not set
 # CONFIG_HID_BELKIN is not set
@@ -2603,7 +2637,7 @@ CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_DEVICE_CLASS=y
 # CONFIG_USB_DYNAMIC_MINORS is not set
 CONFIG_USB_SUSPEND=y
-# CONFIG_USB_OTG is not set
+CONFIG_USB_OTG=y
 # CONFIG_USB_OTG_WHITELIST is not set
 # CONFIG_USB_OTG_BLACKLIST_HUB is not set
 # CONFIG_USB_DWC3 is not set
@@ -2715,10 +2749,13 @@ CONFIG_USB_SERIAL=y
 # CONFIG_USB_SERIAL_SAFE is not set
 # CONFIG_USB_SERIAL_SIEMENS_MPI is not set
 # CONFIG_USB_SERIAL_SIERRAWIRELESS is not set
+CONFIG_USB_SERIAL_SIERRAWIRELESS_SWI=y
 # CONFIG_USB_SERIAL_SYMBOL is not set
 # CONFIG_USB_SERIAL_TI is not set
 # CONFIG_USB_SERIAL_CYBERJACK is not set
 # CONFIG_USB_SERIAL_XIRCOM is not set
+CONFIG_USB_SERIAL_WWAN=y
+
 # CONFIG_USB_SERIAL_OPTION is not set
 # CONFIG_USB_SERIAL_OMNINET is not set
 # CONFIG_USB_SERIAL_OPTICON is not set
@@ -2881,6 +2918,7 @@ CONFIG_LEDS_GPIO_PLATFORM=y
 # CONFIG_LEDS_RENESAS_TPU is not set
 # CONFIG_LEDS_TCA6507 is not set
 # CONFIG_LEDS_OT200 is not set
+CONFIG_LEDS_LM8502=y
 # CONFIG_LEDS_TRIGGERS is not set
 
 #
@@ -3219,7 +3257,7 @@ CONFIG_NLS_UTF8=y
 # Kernel hacking
 #
 CONFIG_PRINTK_TIME=y
-CONFIG_DEFAULT_MESSAGE_LOGLEVEL=4
+CONFIG_DEFAULT_MESSAGE_LOGLEVEL=1
 CONFIG_ENABLE_WARN_DEPRECATED=y
 CONFIG_ENABLE_MUST_CHECK=y
 CONFIG_FRAME_WARN=1024
