--- a/arch/arm/configs/tenderloin4g_android_defconfig
+++ b/arch/arm/configs/tenderloin4g_android_defconfig
@@ -407,7 +407,7 @@ CONFIG_BOARD_HEADER_FILE=""
 # CONFIG_HTC_BATT_ALARM is not set
 # CONFIG_HTC_BATT_CORE is not set
 # CONFIG_HTC_HEADSET_MGR is not set
-CONFIG_HTC_WAKE_ON_VOL=y
+# CONFIG_HTC_WAKE_ON_VOL is not set
 CONFIG_MACH_HP=y
 
 #
@@ -479,7 +479,7 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MAX=1188000
+CONFIG_MSM_CPU_FREQ_MAX=1512000
 CONFIG_MSM_CPU_FREQ_MIN=192000
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
