--- a/drivers/leds/Kconfig
+++ b/drivers/leds/Kconfig
@@ -536,6 +536,13 @@ config LEDS_OT200
 	  This option enables support for the LEDs on the Bachmann OT200.
 	  Say Y to enable LEDs on the Bachmann OT200.
 
+config LEDS_LM8502
+	tristate "LED Support for NS LM8502 controlled LEDs"
+	depends on LEDS_CLASS
+	default n
+	help
+	  This options enables support for NS LM8502 LED controller.
+
 config LEDS_TRIGGERS
 	bool "LED Trigger support"
 	depends on LEDS_CLASS
