--- a/arch/arm/configs/tenderloin4g_android_defconfig
+++ b/arch/arm/configs/tenderloin4g_android_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.76 Kernel Configuration
+# Linux/arm 3.4.82 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -165,6 +165,7 @@ CONFIG_HAVE_KRETPROBES=y
 CONFIG_HAVE_DMA_ATTRS=y
 CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_USE_GENERIC_SMP_HELPERS=y
+CONFIG_GENERIC_SMP_IDLE_THREAD=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
@@ -399,6 +400,9 @@ CONFIG_BOARD_HEADER_FILE=""
 #
 # HTC Board Selection
 #
+# CONFIG_MACH_PYRAMID is not set
+# CONFIG_MACH_SHOOTER is not set
+# CONFIG_MACH_RUBY is not set
 # CONFIG_MACH_HTC_DUMMY is not set
 
 #
@@ -408,6 +412,7 @@ CONFIG_BOARD_HEADER_FILE=""
 # CONFIG_HTC_BATT_CORE is not set
 # CONFIG_HTC_HEADSET_MGR is not set
 # CONFIG_HTC_WAKE_ON_VOL is not set
+# CONFIG_FORCE_FAST_CHARGE is not set
 CONFIG_MACH_HP=y
 
 #
@@ -478,6 +483,8 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 # CONFIG_MSM_RMT_STORAGE_CLIENT_STATS is not set
 CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
+CONFIG_MSM_MPDEC=y
+# CONFIG_MSM_MPDEC_INPUTBOOST_CPUMIN is not set
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=1512000
 CONFIG_MSM_CPU_FREQ_MIN=192000
@@ -564,8 +571,8 @@ CONFIG_HAVE_ARCH_HAS_CURRENT_TIMER=y
 # CONFIG_MSM_CPU_PWRCTL is not set
 CONFIG_MSM_UARTDM=y
 CONFIG_REMOVE_SMI_2X_CLK=y
-CONFIG_MSM_MPDEC=y
 CONFIG_L2_FREQ_FIXUP=y
+
 #
 # System MMU
 #
@@ -821,6 +828,7 @@ CONFIG_IP_PNP_BOOTP=y
 CONFIG_IP_PNP_RARP=y
 CONFIG_NET_IPIP=y
 # CONFIG_NET_IPGRE_DEMUX is not set
+# CONFIG_IP_MROUTE is not set
 # CONFIG_ARPD is not set
 # CONFIG_SYN_COOKIES is not set
 # CONFIG_INET_AH is not set
@@ -848,6 +856,7 @@ CONFIG_TCP_CONG_CUBIC=y
 # CONFIG_TCP_CONG_VENO is not set
 # CONFIG_TCP_CONG_YEAH is not set
 # CONFIG_TCP_CONG_ILLINOIS is not set
+# CONFIG_DEFAULT_BIC is not set
 CONFIG_DEFAULT_CUBIC=y
 # CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="cubic"
@@ -884,6 +893,7 @@ CONFIG_NETWORK_SECMARK=y
 CONFIG_NETFILTER=y
 # CONFIG_NETFILTER_DEBUG is not set
 CONFIG_NETFILTER_ADVANCED=y
+CONFIG_BRIDGE_NETFILTER=y
 
 #
 # Core Netfilter Configuration
@@ -979,6 +989,7 @@ CONFIG_NETFILTER_XT_MATCH_MULTIPORT=y
 # CONFIG_NETFILTER_XT_MATCH_OSF is not set
 # CONFIG_NETFILTER_XT_MATCH_OWNER is not set
 CONFIG_NETFILTER_XT_MATCH_POLICY=y
+# CONFIG_NETFILTER_XT_MATCH_PHYSDEV is not set
 CONFIG_NETFILTER_XT_MATCH_PKTTYPE=y
 CONFIG_NETFILTER_XT_MATCH_QTAGUID=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA=y
@@ -1063,6 +1074,7 @@ CONFIG_IP6_NF_TARGET_REJECT_SKERR=y
 CONFIG_IP6_NF_MANGLE=y
 CONFIG_IP6_NF_RAW=y
 # CONFIG_IP6_NF_SECURITY is not set
+# CONFIG_BRIDGE_NF_EBTABLES is not set
 # CONFIG_IP_DCCP is not set
 # CONFIG_IP_SCTP is not set
 # CONFIG_RDS is not set
@@ -1079,6 +1091,7 @@ CONFIG_BRIDGE=y
 # CONFIG_NET_DSA is not set
 # CONFIG_VLAN_8021Q is not set
 # CONFIG_DECNET is not set
+CONFIG_LLC=y
 # CONFIG_LLC2 is not set
 # CONFIG_IPX is not set
 # CONFIG_ATALK is not set
@@ -1394,6 +1407,7 @@ CONFIG_SCSI_LOWLEVEL=y
 # CONFIG_ATA is not set
 CONFIG_MD=y
 # CONFIG_BLK_DEV_MD is not set
+CONFIG_BLK_DEV_DM_BUILTIN=y
 CONFIG_BLK_DEV_DM=y
 # CONFIG_DM_DEBUG is not set
 CONFIG_DM_CRYPT=y
@@ -1447,7 +1461,6 @@ CONFIG_NET_VENDOR_MARVELL=y
 CONFIG_NET_VENDOR_MICREL=y
 # CONFIG_KS8851_MLL is not set
 # CONFIG_MSM_RMNET is not set
-# CONFIG_MSM_RMNET_DEBUG is not set
 # CONFIG_QFEC is not set
 CONFIG_NET_VENDOR_NATSEMI=y
 CONFIG_NET_VENDOR_8390=y
@@ -1523,6 +1536,12 @@ CONFIG_USB_NET_CDC_NCM=y
 # CONFIG_USB_NET_MCS7830 is not set
 # CONFIG_USB_NET_RNDIS_HOST is not set
 CONFIG_USB_NET_CDC_SUBSET=y
+# CONFIG_USB_ALI_M5632 is not set
+# CONFIG_USB_AN2720 is not set
+CONFIG_USB_BELKIN=y
+CONFIG_USB_ARMLINUX=y
+# CONFIG_USB_EPSON2888 is not set
+# CONFIG_USB_KC2190 is not set
 # CONFIG_USB_NET_ZAURUS is not set
 # CONFIG_USB_NET_CX82310_ETH is not set
 # CONFIG_USB_NET_KALMIA is not set
@@ -1554,8 +1573,6 @@ CONFIG_ATH6KL_DEBUG=y
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
 #
-CONFIG_USB_SIERRA_NET_SWI=y
-CONFIG_USB_NET_HW_CDC=y
 # CONFIG_WAN is not set
 # CONFIG_ISDN is not set
 
@@ -1603,7 +1620,6 @@ CONFIG_INPUT_KEYBOARD=y
 # CONFIG_KEYBOARD_OMAP4 is not set
 # CONFIG_KEYBOARD_XTKBD is not set
 # CONFIG_KEYBOARD_QCIKBD is not set
-CONFIG_KEYBOARD_GPIO_PE=y
 # CONFIG_INPUT_MOUSE is not set
 # CONFIG_INPUT_JOYSTICK is not set
 # CONFIG_INPUT_TABLET is not set
@@ -1649,7 +1665,9 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_LGE_COMMON is not set
 # CONFIG_TOUCHSCREEN_LGE_SYNAPTICS is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
+# CONFIG_TOUCHSCREEN_ATMEL is not set
 # CONFIG_TOUCHSCREEN_ATMEL_224E is not set
+# CONFIG_TOUCHSCREEN_CYPRESS_TMA is not set
 # CONFIG_TOUCHSCREEN_CYPRESS_CS is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_3K is not set
 CONFIG_TOUCHSCREEN_CY8CTMA395=y
@@ -1681,11 +1699,15 @@ CONFIG_PMIC8058_OTHC=y
 # CONFIG_STM_LIS3DH is not set
 # CONFIG_BMP18X is not set
 # CONFIG_SENSORS_AKM8963_NST is not set
+# CONFIG_SENSORS_AKM8963 is not set
 # CONFIG_SENSORS_AKM8975 is not set
 # CONFIG_SENSORS_PANASONIC_GYRO is not set
 # CONFIG_SENSORS_BMA250 is not set
 # CONFIG_SENSORS_BMA250_BOSCH is not set
+# CONFIG_INPUT_CAPELLA_CM3628 is not set
 # CONFIG_INPUT_CAPELLA_CM3629 is not set
+# CONFIG_INPUT_ISL29028 is not set
+# CONFIG_INPUT_ISL29029 is not set
 # CONFIG_SENSORS_R3GD20 is not set
 CONFIG_INPUT_LSM303DLH=y
 CONFIG_INPUT_ISL29023=y
@@ -1754,6 +1776,7 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_SERIAL_MSM is not set
 CONFIG_SERIAL_MSM_HS=y
 CONFIG_SERIAL_MSM_HS_BRCM=y
+# CONFIG_SERIAL_MSM_HS_TI_DC is not set
 CONFIG_SERIAL_MSM_HSL=y
 # CONFIG_SERIAL_CIR is not set
 CONFIG_SERIAL_MSM_HSL_CONSOLE=y
@@ -2020,11 +2043,11 @@ CONFIG_SENSORS_MSM_ADC=y
 # CONFIG_SENSORS_W83627HF is not set
 # CONFIG_SENSORS_W83627EHF is not set
 CONFIG_THERMAL=y
+CONFIG_THERMAL_TSENS8x60=y
 CONFIG_THERMAL_HWMON=y
 # CONFIG_THERMAL_MSM_POPMEM is not set
 # CONFIG_THERMAL_TSENS is not set
 # CONFIG_THERMAL_TSENS8960 is not set
-CONFIG_THERMAL_TSENS8x60=y
 # CONFIG_THERMAL_TSENS8974 is not set
 # CONFIG_THERMAL_PM8XXX is not set
 # CONFIG_WATCHDOG is not set
@@ -2091,6 +2114,7 @@ CONFIG_MFD_PM8XXX=y
 CONFIG_MFD_PM8XXX_IRQ=y
 # CONFIG_MFD_PM8821_IRQ is not set
 # CONFIG_MFD_TPS65090 is not set
+# CONFIG_MFD_TPS65200 is not set
 # CONFIG_MFD_AAT2870_CORE is not set
 CONFIG_MFD_PM8XXX_DEBUG=y
 # CONFIG_MFD_PM8XXX_PWM is not set
@@ -2273,9 +2297,6 @@ CONFIG_VIDEO_IR_I2C=y
 # CONFIG_V4L_USB_DRIVERS is not set
 CONFIG_V4L_PLATFORM_DRIVERS=y
 # CONFIG_SOC_CAMERA is not set
-# CONFIG_VIDEO_NMI is not set
-CONFIG_ISDBT_NMI=y
-# CONFIG_ISDBT_NMI_DEBUG is not set
 
 #
 # Qualcomm MSM Camera And Video
@@ -2287,18 +2308,62 @@ CONFIG_MSM_CAMERA=y
 #
 # Camera Sensor Selection
 #
+CONFIG_MT9D113=y
 # CONFIG_IMX074 is not set
-# CONFIG_WEBCAM_OV7692 is not set
+# CONFIG_S5K3H2YX is not set
+# CONFIG_S5K6A1GX is not set
+# CONFIG_S5K3H1GX_ACT is not set
+# CONFIG_AR0260 is not set
+# CONFIG_OV2722 is not set
+# CONFIG_OV5640 is not set
+# CONFIG_OV5647 is not set
+# CONFIG_MT9M114 is not set
 CONFIG_WEBCAM_MT9M113=y
-# CONFIG_WEBCAM_MT9M114 is not set
+# CONFIG_WEBCAM_OV7692 is not set
+# CONFIG_WEBCAM_OV9726 is not set
 # CONFIG_VX6953 is not set
+# CONFIG_MT9E013 is not set
+# CONFIG_IMX074_ACT is not set
+# CONFIG_S5K3H2YX_ACT is not set
+CONFIG_QS_S5K4E1=y
+# CONFIG_S5K4E1 is not set
+# CONFIG_S5K3H1GX is not set
+# CONFIG_MSM_CAMERA_FLASH_SC628A is not set
+# CONFIG_IMX072 is not set
+# CONFIG_OV2720 is not set
 # CONFIG_MSM_CAMERA_FLASH is not set
-# CONFIG_VIDEO_MSM is not set
+# CONFIG_MSM_CAMERA_SENSOR is not set
+# CONFIG_MSM_ACTUATOR is not set
 CONFIG_MSM_GEMINI=y
 CONFIG_MSM_VPE=y
+# CONFIG_RAWCHIP is not set
+# CONFIG_RAWCHIPII is not set
+# CONFIG_CAMERA_IMAGE_NONE_BOARD is not set
 CONFIG_QUP_EXCLUSIVE_TO_CAMERA=y
+# CONFIG_S5K3L1YX is not set
+# CONFIG_IMX091 is not set
+# CONFIG_IMX105 is not set
+# CONFIG_IMX175 is not set
+# CONFIG_IMX135 is not set
+# CONFIG_OV8838 is not set
+# CONFIG_IMX175_ACT is not set
+# CONFIG_RUMBAS_ACT is not set
+# CONFIG_AD5823_ACT is not set
+# CONFIG_AD5816_ACT is not set
+# CONFIG_TI201_ACT is not set
+# CONFIG_ACT_OIS_BINDER is not set
+# CONFIG_LC898212_ACT is not set
+# CONFIG_MT9V113 is not set
+# CONFIG_IMX175_2LANE is not set
+# CONFIG_OV5693_ACT is not set
+# CONFIG_OV5693 is not set
+# CONFIG_RAWCHIP_MCLK is not set
+# CONFIG_DISABLE_MCLK_RAWCHIP_TO_MAINCAM is not set
+# CONFIG_S5K6A2YA is not set
+# CONFIG_S5K6AAFX is not set
+# CONFIG_VD6869 is not set
+# CONFIG_OV4688 is not set
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
-CONFIG_MSM_VIDC=y
 # CONFIG_MSM_WFD is not set
 # CONFIG_RADIO_ADAPTERS is not set
 
@@ -2572,7 +2637,6 @@ CONFIG_USB_HID=y
 #
 # Special HID drivers
 #
-CONFIG_HID_GENERIC=y
 CONFIG_HID_A4TECH=y
 # CONFIG_HID_ACRUX is not set
 # CONFIG_HID_APPLE is not set
@@ -2754,8 +2818,6 @@ CONFIG_USB_SERIAL_SIERRAWIRELESS_SWI=y
 # CONFIG_USB_SERIAL_TI is not set
 # CONFIG_USB_SERIAL_CYBERJACK is not set
 # CONFIG_USB_SERIAL_XIRCOM is not set
-CONFIG_USB_SERIAL_WWAN=y
-
 # CONFIG_USB_SERIAL_OPTION is not set
 # CONFIG_USB_SERIAL_OMNINET is not set
 # CONFIG_USB_SERIAL_OPTICON is not set
@@ -2860,6 +2922,7 @@ CONFIG_MMC_UNSAFE_RESUME=y
 # CONFIG_MMC_CLKGATE is not set
 # CONFIG_MMC_EMBEDDED_SDIO is not set
 # CONFIG_MMC_PARANOID_SD_INIT is not set
+# CONFIG_MMC_NO_BKOPS is not set
 
 #
 # MMC/SD/SDIO Card Drivers
@@ -2870,6 +2933,7 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_MMC_BLOCK_DEFERRED_RESUME is not set
 # CONFIG_SDIO_UART is not set
 # CONFIG_MMC_TEST is not set
+# CONFIG_MMC_TI_SDIO_ADAPT is not set
 
 #
 # MMC/SD/SDIO Host Controller Drivers
@@ -2909,6 +2973,7 @@ CONFIG_LEDS_GPIO_PLATFORM=y
 # CONFIG_LEDS_LP5523 is not set
 # CONFIG_LEDS_PCA955X is not set
 # CONFIG_LEDS_PM8XXX is not set
+# CONFIG_LEDS_PM8038 is not set
 # CONFIG_LEDS_PCA9633 is not set
 # CONFIG_LEDS_REGULATOR is not set
 # CONFIG_LEDS_BD2802 is not set
@@ -2929,6 +2994,7 @@ CONFIG_LEDS_LM8502=y
 # LED Flashlights
 #
 # CONFIG_FLASHLIGHT_TPS61310 is not set
+# CONFIG_FLASHLIGHT_AAT is not set
 CONFIG_SWITCH=y
 CONFIG_SWITCH_GPIO=y
 # CONFIG_SWITCH_FSA8008 is not set
