--- a/drivers/net/usb/Makefile
+++ b/drivers/net/usb/Makefile
@@ -32,4 +32,5 @@ obj-$(CONFIG_USB_VL600)		+= lg-vl600.o
 rmnet_usb-y			:= rmnet_usb_ctrl.o rmnet_usb_data.o
 obj-$(CONFIG_MSM_RMNET_USB)	+= rmnet_usb.o
 obj-$(CONFIG_USB_NET_QMI_WWAN)	+= qmi_wwan.o
+obj-$(CONFIG_USB_NET_HW_CDC)	+= hw_cdc_driver.o
 
