--- a/arch/arm/configs/tenderloin4g_android_defconfig
+++ b/arch/arm/configs/tenderloin4g_android_defconfig
@@ -1552,6 +1552,7 @@ CONFIG_USB_ARMLINUX=y
 # CONFIG_USB_SIERRA_NET is not set
 # CONFIG_USB_VL600 is not set
 # CONFIG_MSM_RMNET_USB is not set
+CONFIG_USB_NET_HW_CDC=y
 CONFIG_WLAN=y
 # CONFIG_USB_ZD1201 is not set
 # CONFIG_USB_NET_RNDIS_WLAN is not set
